<resources>
    <string name="app_name">NestEgg_MyPage</string>
    <string name="points">0 Eggsperience Points</string>
    <string name="username">Emily</string>
    <string name="eggdisplay">My Eggs</string>
    <string name="menu">Menu</string>
    <string name="achievement">Achievements</string>
    <string name="Ach1">Novice Saver!</string>
    <string name="AchD1">Complete your first saving goal</string>
    <string name="eggcellent">Eggcellent!</string>
    <string name="progress">Progress</string>
    <string name="collect1">Award: 10 EggsP</string>
    <string name="collect2">Award: 20 EggsP</string>
    <string name="collect3">Award: 30 EggsP</string>
    <string name="collect4">Award: 40 EggsP</string>
    <string name="collect5">Award: 50 EggsP</string>
    <string name="collect6">Award: 60 EggsP</string>
    <string name="collect7">Award: 70 EggsP</string>
    <string name="collect8">Award: 80 EggsP</string>
    <string name="collect9">Award: 90 EggsP</string>
    <string name="collect10">Award: 100 EggsP</string>
    <string name="collect11">Award: 110 EggsP</string>
    <string name="Ach4">Cracking Stuff!</string>
    <string name="AchD4">Crack no eggs for a month</string>
    <string name="Ach2">Shellebration!</string>
    <string name="AchD2">Unlock your first egg</string>
    <string name="Ach3">Eye on the boil!</string>
    <string name="AchD3">Unlock 5 eggs</string>
    <string name="Ach5">Chick it out!</string>
    <string name="AchD5">Earn 100 eggperience points</string>
    <string name="Ach6">Shoulder to fry on!</string>
    <string name="AchD6">Crack an egg in your nest</string>
    <string name="Ach7">Early bird!</string>
    <string name="AchD7">Complete saving goal before set time</string>
    <string name="Ach8">Scrambled!</string>
    <string name="AchD8">Set five saving goals for one month</string>
    <string name="Ach9">Eggspert Saver!</string>
    <string name="AchD9">Complete 20 saving goals</string>
    <string name="Ach10">Saved in earNEST!</string>
    <string name="AchD10">Complete 10 goals before set time</string>
    <string name="Ach11">That\'s all, yolks!</string>
    <string name="AchD11">Unlock all eggs</string>
    <string name="eggstatic">Eggstatic!</string>
    <string name="eggsceptional">Eggsceptional!</string>
    <string name="eggstraordinary">Eggstraordinary!</string>
    <string name="eggsquisite">Eggsquisite!</string>
    <string name="eggsemplary">Eggsemplary!</string>
    <string name="eggsplosive">Eggsplosive!</string>
    <string name="eggscidents">Eggscidents happen!</string>
    <string name="unlock">Unlock</string>
</resources>