<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/points"
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_corner"
        android:textColor="@color/white"
        android:text="@string/points"
        android:textSize="16dp"
        android:maxLines="1"
        android:paddingLeft="40dp"
        android:paddingTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/smileyface"
        android:layout_width="40dp"
        android:layout_height="55dp"
        android:layout_marginRight="170dp"
        app:srcCompat="@drawable/smiley_foreground"
        app:layout_constraintBottom_toBottomOf="@+id/points"
        app:layout_constraintEnd_toEndOf="@+id/points"
        app:layout_constraintStart_toStartOf="@+id/points"
        app:layout_constraintTop_toTopOf="@+id/points"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="180dp" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="95dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/username"
        android:clickable="true"
        android:onClick="addEggsP"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center_horizontal"
        android:paddingTop="5dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/points"
        android:focusable="true" />

    <TextView
        android:id="@+id/eggs"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rounded_corner"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/eggdisplay"
        android:textColor="@color/greyblack"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/achievements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="250dp"
        android:text="@string/menu"
        android:textColor="@color/greyblack"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/eggs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar" />

    <ScrollView
        android:layout_width="312dp"
        android:layout_height="286dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/rounded_corner_cream"
        app:layout_constraintBottom_toBottomOf="@+id/eggs"
        app:layout_constraintEnd_toEndOf="@+id/eggs"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="@+id/eggs"
        app:layout_constraintTop_toTopOf="@+id/eggs"
        app:layout_constraintVertical_bias="0.796">

        <LinearLayout
            android:layout_width="312dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <HorizontalScrollView
                android:layout_width="300dp"
                android:layout_height="65dp">

                <LinearLayout
                    android:layout_width="312dp"
                    android:layout_height="65dp"
                    android:orientation="horizontal">

<!--                    <ImageView-->
<!--                        android:id="@+id/lock1"-->
<!--                        android:layout_width="33dp"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:paddingTop="10dp"-->
<!--                        android:scaleType="centerCrop"-->
<!--                        app:srcCompat="@drawable/lock_foreground" />-->

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="25dp"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/egg1" />

                    <Button
                        android:id="@+id/unlock1"
                        android:layout_height="50dp"
                        android:layout_width="120dp"
                        android:layout_marginLeft="42dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/unlock"
                        android:backgroundTint="@color/appBrown"
                        app:cornerRadius = "50dp"
                        android:textAllCaps="false"

                        />


                </LinearLayout>

            </HorizontalScrollView>



            <HorizontalScrollView
                android:layout_width="300dp"
                android:layout_height="65dp">

                <LinearLayout
                    android:layout_width="312dp"
                    android:layout_height="65dp"
                    android:orientation="horizontal">

<!--                    <ImageView-->
<!--                        android:id="@+id/lock1"-->
<!--                        android:layout_width="33dp"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:paddingTop="10dp"-->
<!--                        android:scaleType="centerCrop"-->
<!--                        app:srcCompat="@drawable/lock_foreground" />-->

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/egg2" />

                    <Button
                        android:id="@+id/unlock2"
                        android:layout_height="50dp"
                        android:layout_width="120dp"
                        android:layout_marginLeft="47dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/unlock"
                        android:backgroundTint="@color/appBrown"
                        app:cornerRadius = "50dp"
                        android:textAllCaps="false"
                        />
                </LinearLayout>

            </HorizontalScrollView>

            <HorizontalScrollView
                android:layout_width="300dp"
                android:layout_height="65dp">

                <LinearLayout
                    android:layout_width="312dp"
                    android:layout_height="65dp"
                    android:orientation="horizontal">

<!--                    <ImageView-->
<!--                        android:id="@+id/lock1"-->
<!--                        android:layout_width="33dp"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:paddingTop="10dp"-->
<!--                        android:scaleType="centerCrop"-->
<!--                        app:srcCompat="@drawable/lock_foreground" />-->

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="30dp"
                        app:srcCompat="@drawable/egg3" />

                    <Button
                        android:id="@+id/unlock3"
                        android:layout_height="50dp"
                        android:layout_width="120dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/unlock"
                        android:backgroundTint="@color/appBrown"
                        app:cornerRadius = "50dp"
                        android:textAllCaps="false"

                        />


                </LinearLayout>

            </HorizontalScrollView>

            <HorizontalScrollView
                android:layout_width="300dp"
                android:layout_height="65dp">

                <LinearLayout
                    android:layout_width="312dp"
                    android:layout_height="65dp"
                    android:orientation="horizontal">

<!--                    <ImageView-->
<!--                        android:id="@+id/lock1"-->
<!--                        android:layout_width="33dp"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:paddingTop="10dp"-->
<!--                        android:scaleType="centerCrop"-->
<!--                        app:srcCompat="@drawable/lock_foreground" />-->

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="30dp"
                        app:srcCompat="@drawable/egg4" />

                    <Button
                        android:id="@+id/unlock4"
                        android:layout_height="50dp"
                        android:layout_width="120dp"
                        android:layout_marginLeft="41dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/unlock"
                        android:backgroundTint="@color/appBrown"
                        app:cornerRadius = "50dp"
                        android:textAllCaps="false"

                        />


                </LinearLayout>

            </HorizontalScrollView>

            <HorizontalScrollView
                android:layout_width="300dp"
                android:layout_height="65dp">

                <LinearLayout
                    android:layout_width="312dp"
                    android:layout_height="65dp"
                    android:orientation="horizontal">

<!--                    <ImageView-->
<!--                        android:id="@+id/lock1"-->
<!--                        android:layout_width="33dp"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:paddingTop="10dp"-->
<!--                        android:scaleType="centerCrop"-->
<!--                        app:srcCompat="@drawable/lock_foreground" />-->

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="30dp"
                        app:srcCompat="@drawable/egg5" />

                    <Button
                        android:id="@+id/unlock5"
                        android:layout_height="50dp"
                        android:layout_width="120dp"
                        android:layout_marginLeft="42dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/unlock"
                        android:backgroundTint="@color/appBrown"
                        app:cornerRadius = "50dp"
                        android:textAllCaps="false"

                        />


                </LinearLayout>

            </HorizontalScrollView>

            <HorizontalScrollView
                android:layout_width="300dp"
                android:layout_height="65dp">

                <LinearLayout
                    android:layout_width="312dp"
                    android:layout_height="65dp"
                    android:orientation="horizontal">

<!--                    <ImageView-->
<!--                        android:id="@+id/lock1"-->
<!--                        android:layout_width="33dp"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:paddingTop="10dp"-->
<!--                        android:scaleType="centerCrop"-->
<!--                        app:srcCompat="@drawable/lock_foreground" />-->

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="30dp"
                        app:srcCompat="@drawable/egg6" />

                    <Button
                        android:id="@+id/unlock6"
                        android:layout_height="50dp"
                        android:layout_width="120dp"
                        android:layout_marginLeft="42dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/unlock"
                        android:backgroundTint="@color/appBrown"
                        app:cornerRadius = "50dp"
                        android:textAllCaps="false"

                        />


                </LinearLayout>

            </HorizontalScrollView>

            <HorizontalScrollView
                android:layout_width="300dp"
                android:layout_height="65dp">

                <LinearLayout
                    android:layout_width="312dp"
                    android:layout_height="65dp"
                    android:orientation="horizontal">

<!--                    <ImageView-->
<!--                        android:id="@+id/lock2"-->
<!--                        android:layout_width="33dp"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:paddingTop="10dp"-->
<!--                        android:scaleType="centerCrop"-->
<!--                        app:srcCompat="@drawable/lock_foreground" />-->

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="30dp"
                        app:srcCompat="@drawable/goldegg" />

                    <Button
                        android:id="@+id/unlock7"
                        android:layout_height="50dp"
                        android:layout_width="120dp"
                        android:layout_marginLeft="42dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/unlock"
                        android:backgroundTint="@color/appBrown"
                        app:cornerRadius = "50dp"
                        android:textAllCaps="false" />

                </LinearLayout>

            </HorizontalScrollView>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/achievements"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:text="@string/achievement"
        android:backgroundTint="@color/appBrown"
        app:cornerRadius = "50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>